--- a/SimpleWeather!/Base.lproj/Main.storyboard
+++ b/SimpleWeather!/Base.lproj/Main.storyboard
@@ -277,7 +277,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d2D-tT-wj2">
-                                <rect key="frame" x="0.0" y="64" width="414" height="300"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="300"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="80°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="32" translatesAutoresizingMaskIntoConstraints="NO" id="Pnc-ia-V2B">
                                         <rect key="frame" x="44" y="99" width="103" height="82"/>
@@ -326,14 +326,14 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BRy-eK-jsi">
-                                <rect key="frame" x="0.0" y="364" width="414" height="372"/>
+                                <rect key="frame" x="0.0" y="320" width="414" height="416"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Cell" rowHeight="80" id="3DI-VK-1YU" customClass="WeatherTableViewCell" customModule="SimpleWeather_" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3DI-VK-1YU" id="Pmi-1q-NRl">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.666666666666671"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JNy-mL-Z6g">
@@ -424,12 +424,14 @@
                             <constraint firstItem="RWV-8Z-eoJ" firstAttribute="top" secondItem="rM0-Vk-GUv" secondAttribute="bottom" constant="17" id="w22-YO-MOC"/>
                         </constraints>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="dateLabel" destination="RWV-8Z-eoJ" id="Xit-f1-tc4"/>
                         <outlet property="locationLabel" destination="cJi-gf-t0q" id="rkm-ec-wWS"/>
                         <outlet property="tableView" destination="BRy-eK-jsi" id="hN1-0c-eFA"/>
                         <outlet property="tempLabel" destination="Pnc-ia-V2B" id="6YX-Rn-AMU"/>
                         <outlet property="weatherImage" destination="HCw-S2-kg2" id="mzH-KK-MOZ"/>
+                        <outlet property="weatherTodayView" destination="d2D-tT-wj2" id="hv6-rv-wNV"/>
                         <outlet property="weatherTypeLabel" destination="JQw-Zm-g6W" id="FpK-04-NaZ"/>
                     </connections>
                 </viewController>
