Updated launch image

--- a/SimpleWeather!/Base.lproj/LaunchScreen.storyboard
+++ b/SimpleWeather!/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,16 +21,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="gta-5i-3HS">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="wm0-Ih-jUe">
+                                <rect key="frame" x="87.5" y="259.5" width="200" height="148"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="wm0-Ih-jUe" secondAttribute="height" multiplier="65:48" id="BX4-l1-fmN"/>
+                                    <constraint firstAttribute="width" constant="200" id="Nfe-ch-2hf"/>
+                                </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.42949452996253967" green="0.70101416110992432" blue="0.95300960540771484" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="gta-5i-3HS" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="9aO-X1-6Go"/>
-                            <constraint firstItem="gta-5i-3HS" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="BmJ-Fk-4T0"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="gta-5i-3HS" secondAttribute="bottom" id="Krg-VB-iIz"/>
-                            <constraint firstAttribute="trailing" secondItem="gta-5i-3HS" secondAttribute="trailing" id="hA3-O7-07l"/>
+                            <constraint firstItem="wm0-Ih-jUe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="3Jm-4u-EfU"/>
+                            <constraint firstItem="wm0-Ih-jUe" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="k28-yQ-DxR"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -40,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Launch" width="360" height="720"/>
+        <image name="Launch" width="325" height="240"/>
     </resources>
 </document>
